--- a/index.src.html
+++ b/index.src.html
@@ -4322,7 +4322,7 @@ will enforce the following requirements:
 : <dfn dict-member for=VideoFrameCopyToOptions>format</dfn>
 :: A {{VideoPixelFormat}} for the pixel data in the destination
     {{BufferSource}}. Potential values are: {{RGBA}}, {{RGBX}}, {{BGRA}},
-    {{BGRX}}. If it does not [=map/exist=], the the destination
+    {{BGRX}}. If it does not [=map/exist=], the destination
     {{BufferSource}} will be in the same format as {{VideoFrame/format}} .
 : <dfn dict-member for=VideoFrameCopyToOptions>colorSpace</dfn>
 :: A {{PredefinedColorSpace}} that <em class="rfc2119">MUST</em> be used as
