Restore special character. Spaces instead of tabs.

--- a/index.src.html
+++ b/index.src.html
@@ -5470,7 +5470,7 @@ interface ImageDecoder {
         determine the number of tracks:
         1. If {{ImageDecoder/complete}} is `true`, [=queue a task=] to run the
             [=ImageDecoder/Close ImageDecoder=] algorithm with a
-	    {{InvalidStateError}} {{DOMException}}.
+            {{InvalidStateError}} {{DOMException}}.
         2. Abort these steps.
     3. If the number of tracks is found to be `0`, [=queue a task=] to run the
         [=ImageDecoder/Close ImageDecoder=] algorithm and abort these steps.
@@ -5735,13 +5735,13 @@ interface ImageDecoder {
     2. Clear {{ImageDecoder/[[codec implementation]]}} and release associated
         [=system resources=].
     3. If {{ImageDecoder/[[ImageTrackList]]}} is empty, reject
-	{{ImageTrackList/[[ready promise]]}} with |exception|. Otherwise
-	perform these steps,
-    	1. Remove all entries from {{ImageDecoder/[[ImageTrackList]]}}.
-    	2. Assign `-1` to {{ImageDecoder/[[ImageTrackList]]}}'s
-           {{ImageTrackList/[[selected index]]}}.
-    4. If {{ImageDecoder/[[complete]]}} is false resolve
-	{{ImageDecoder/[[completed promise]]}} with |exception|.
+        {{ImageTrackList/[[ready promise]]}} with |exception|. Otherwise
+        perform these steps,
+        1. Remove all entries from {{ImageDecoder/[[ImageTrackList]]}}.
+        2. Assign `-1` to {{ImageDecoder/[[ImageTrackList]]}}'s
+            {{ImageTrackList/[[selected index]]}}.
+   4. If {{ImageDecoder/[[complete]]}} is false resolve
+        {{ImageDecoder/[[completed promise]]}} with |exception|.
 
 ImageDecoderInit Interface {#imagedecoderinit-interface}
 --------------------------------------------------------
@@ -5895,7 +5895,7 @@ interface ImageTrackList {
 : <dfn attribute for=ImageTrackList>[[track list]]</dfn>
 :: The list of {{ImageTrack}}s describe by this {{ImageTrackList}}.
 
-: <dfn attribute for=ImageTrackList>[[selected index]]</dfn>
+: <dfn attribute for=ImageTrackList>\[[selected index]]</dfn>
 :: The index of the selected track in {{ImageTrackList/[[track list]]}}. A
     value of `-1` indicates that no track is selected. The initial value
     is `-1`.
