Mark ImageDecoderInit.data as AllowSharedBufferSource.
This is what Chromium implements, but we forgot to update the
spec when other data fields were changed to allow shared
buffers.

Fixes #799

--- a/index.src.html
+++ b/index.src.html
@@ -5747,7 +5747,7 @@ ImageDecoderInit Interface {#imagedecoderinit-interface}
 --------------------------------------------------------
 <pre class='idl'>
 <xmp>
-typedef (BufferSource or ReadableStream) ImageBufferSource;
+typedef (AllowSharedBufferSource or ReadableStream) ImageBufferSource;
 dictionary ImageDecoderInit {
   required DOMString type;
   required ImageBufferSource data;
