--- a/index.src.html
+++ b/index.src.html
@@ -3695,8 +3695,8 @@ dictionary VideoFrameMetadata {
 : <dfn attribute for=VideoFrame>timestamp</dfn>
 :: The presentation timestamp, given in microseconds. For decode,
     timestamp is copied from the {{EncodedVideoChunk}} corresponding
-    to this VideoFrame. For encode, timestamp is copied to the
-    {{EncodedVideoChunk}}s corresponding to this VideoFrame. 
+    to this {{VideoFrame}}. For encode, timestamp is copied to the
+    {{EncodedVideoChunk}}s corresponding to this {{VideoFrame}}. 
 
     The {{VideoFrame/timestamp}} getter steps are to return
     {{VideoFrame/[[timestamp]]}}.
