Fix audio/video mix-up

--- a/index.src.html
+++ b/index.src.html
@@ -1305,8 +1305,8 @@ Algorithms {#audioencoder-algorithms}
 EncodedAudioChunkMetadata {#encoded-audio-chunk-metadata}
 ---------------------------------------------------------
 The following metadata dictionary is emitted by the
-{{EncodedVideoChunkOutputCallback}} alongside an associated
-{{EncodedVideoChunk}}.
+{{EncodedAudioChunkOutputCallback}} alongside an associated
+{{EncodedAudioChunk}}.
 
 <xmp class='idl'>
 dictionary EncodedAudioChunkMetadata {
