change assert type
Co-authored-by: Jeffrey Yasskin <jyasskin@gmail.com>

--- a/index.src.html
+++ b/index.src.html
@@ -4213,8 +4213,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     9. Return |combinedLayout|.
 
 : <dfn>Convert PredefinedColorSpace to VideoColorSpace</dfn> (with |colorSpace|)
- :: 1. This algorithm <em class="rfc2119">MUST</em> be called only if |colorSpace|
-        is equal to one of {{srgb}}, {{display-p3}}.
+ :: 1. Assert: |colorSpace| is equal to one of {{srgb}} or {{display-p3}}.
     2. If |colorSpace| is equal to {{srgb}} return a new instance of the
         [=sRGB Color Space=]
     3. If |colorSpace| is equal to {{display-p3}} return a new instance of the
